First usable version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
-projectName=skotliton
-projectVersion=0.0.3
+projectName=molinfo
+projectVersion=0.0.1
 
 kotlin.code.style=official
 
@@ -17,7 +17,9 @@ serializationRuntimeVersion=1.0.1
 kotlinLoggingVersion=2.0.6
 woodstoxVersion=6.2.3
 junitApiVersion=5.8.0-M1
-slf4jVersion=2.14.1
+logbackVersion=1.2.1
+
+redissonVersion=3.15.5
 
 detektVersion=1.17.0
 kotlinterVersion=3.4.4
@@ -26,3 +28,7 @@ ktlintVersion=10.0.0
 coroutinesVersion=1.4.0
 
 publicationName=maven
+
+cdkVersion=2.5
+
+ktorVersion=1.5.4
