Enable cache and support masses

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -2,6 +2,10 @@ ktor {
     deployment {
         port = 8042
         port = ${?PORT}
+        connectionGroupSize = 2
+        workerGroupSize = 2
+        callGroupSize = 4
+        tcpKeepAlive = true
     }
     application {
         modules = [ net.nprod.molinfo.MainKt.module ]
