--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,4 +17,5 @@ services:
       - ./build/install/molinfo:/app:ro
 networks:
   molinfo_internal:
-  internal:
+  proxy_internal:
+    external: true
